Finished first Challenge and Week One

--- a/Me/Primera/Cypress/package.json
+++ b/Me/Primera/Cypress/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress open --e2e -b chrome",
+    "primerTest": "npx cypress run --spec 'cypress/e2e/primerTest.cy.js'",
+    "prod": "npx cypress open --e2e -b chrome --config baseUrl=https://pushing-front.vercel.app",
+    "testing": "npx cypress open --e2e -b chrome --config baseUrl=https://pushing-it.vercel.app"
   },
   "keywords": [],
   "author": "",
